@@ -17,18 +17,8 @@
 
 package org.apache.solr.filestore;
 
-import java.io.FileInputStream;
-import java.io.IOException;
-import java.nio.ByteBuffer;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.Set;
-import java.util.concurrent.Callable;
-import java.util.function.Predicate;
-
-import com.google.common.collect.ImmutableSet;
 import org.apache.commons.codec.digest.DigestUtils;
+import org.apache.http.client.methods.HttpDelete;
 import org.apache.solr.client.solrj.SolrClient;
 import org.apache.solr.client.solrj.SolrRequest;
 import org.apache.solr.client.solrj.SolrServerException;
@@ -36,6 +26,7 @@ import org.apache.solr.client.solrj.embedded.JettySolrRunner;
 import org.apache.solr.client.solrj.impl.BaseHttpSolrClient.RemoteExecutionException;
 import org.apache.solr.client.solrj.impl.HttpSolrClient;
 import org.apache.solr.client.solrj.request.V2Request;
+import org.apache.solr.client.solrj.response.SimpleSolrResponse;
 import org.apache.solr.client.solrj.response.V2Response;
 import org.apache.solr.cloud.MiniSolrCloudCluster;
 import org.apache.solr.cloud.SolrCloudTestCase;
@@ -49,9 +40,23 @@ import org.apache.solr.util.LogLevel;
 import org.apache.zookeeper.server.ByteBufferInputStream;
 import org.junit.After;
 import org.junit.Before;
+import org.junit.Test;
+
+import java.io.IOException;
+import java.io.InputStream;
+import java.nio.ByteBuffer;
+import java.nio.file.Paths;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Set;
+import java.util.Collections;
+import java.util.List;
+import java.util.concurrent.Callable;
+import java.util.function.Predicate;
 
 import static org.apache.solr.common.util.Utils.JAVABINCONSUMER;
-import static org.apache.solr.core.TestDynamicLoading.getFileContent;
+import static org.apache.solr.core.TestSolrConfigHandler.getFileContent;
+import static org.hamcrest.CoreMatchers.containsString;
 
 @LogLevel("org.apache.solr.filestore.PackageStoreAPI=DEBUG;org.apache.solr.filestore.DistribPackageStore=DEBUG")
 public class TestDistribPackageStore extends SolrCloudTestCase {
@@ -66,6 +71,7 @@ public class TestDistribPackageStore extends SolrCloudTestCase {
     System.clearProperty("enable.packages");
   }
   
+  @Test
   public void testPackageStoreManagement() throws Exception {
     MiniSolrCloudCluster cluster =
         configureCluster(4)
@@ -76,8 +82,6 @@ public class TestDistribPackageStore extends SolrCloudTestCase {
 
       byte[] derFile = readFile("cryptokeys/pub_key512.der");
       uploadKey(derFile, PackageStoreAPI.KEYS_DIR+"/pub_key512.der", cluster);
-//      cluster.getZkClient().makePath("/keys/exe", true);
-//      cluster.getZkClient().create("/keys/exe/pub_key512.der", derFile, CreateMode.PERSISTENT, true);
 
       try {
         postFile(cluster.getSolrClient(), getFileContent("runtimecode/runtimelibs.jar.bin"),
@@ -86,7 +90,7 @@ public class TestDistribPackageStore extends SolrCloudTestCase {
         );
         fail("should have failed because of wrong signature ");
       } catch (RemoteExecutionException e) {
-        assertTrue(e.getMessage().contains("Signature does not match"));
+        assertThat(e.getMessage(), containsString("Signature does not match"));
       }
 
       postFile(cluster.getSolrClient(), getFileContent("runtimecode/runtimelibs.jar.bin"),
@@ -99,7 +103,7 @@ public class TestDistribPackageStore extends SolrCloudTestCase {
           new V2Request.Builder("/node/files/package/mypkg/v1.0")
               .withMethod(SolrRequest.METHOD.GET)
               .build(),
-          Utils.makeMap(
+          Map.of(
               ":files:/package/mypkg/v1.0[0]:name", "runtimelibs.jar",
               ":files:/package/mypkg/v1.0[0]:sha512", "d01b51de67ae1680a84a813983b1de3b592fc32f1a22b662fc9057da5953abd1b72476388ba342cad21671cd0b805503c78ab9075ff2f3951fdf75fa16981420",
               ":files:/package/mypkg/v1.0[0]:sig[0]", "L3q/qIGs4NaF6JiO0ZkMUFa88j0OmYc+I6O7BOdNuMct/xoZ4h73aZHZGc0+nmI1f/U3bOlMPINlSOM6LK3JpQ=="
@@ -111,61 +115,59 @@ public class TestDistribPackageStore extends SolrCloudTestCase {
           new V2Request.Builder("/node/files/package/mypkg")
               .withMethod(SolrRequest.METHOD.GET)
               .build(),
-          Utils.makeMap(
+          Map.of(
               ":files:/package/mypkg[0]:name", "v1.0",
               ":files:/package/mypkg[0]:dir", "true"
           )
       );
 
-      Map expected = Utils.makeMap(
+      Map<String,Object> expected = Map.of(
           ":files:/package/mypkg/v1.0/runtimelibs.jar:name", "runtimelibs.jar",
-          ":files:/package/mypkg/v1.0[0]:sha512", "d01b51de67ae1680a84a813983b1de3b592fc32f1a22b662fc9057da5953abd1b72476388ba342cad21671cd0b805503c78ab9075ff2f3951fdf75fa16981420"
-
+          ":files:/package/mypkg/v1.0/runtimelibs.jar:sha512", "d01b51de67ae1680a84a813983b1de3b592fc32f1a22b662fc9057da5953abd1b72476388ba342cad21671cd0b805503c78ab9075ff2f3951fdf75fa16981420"
       );
-      waitForAllNodesHaveFile(cluster,"/package/mypkg/v1.0/runtimelibs.jar", expected, true);
-
-
+      checkAllNodesForFile(cluster,"/package/mypkg/v1.0/runtimelibs.jar", expected, true);
       postFile(cluster.getSolrClient(), getFileContent("runtimecode/runtimelibs_v2.jar.bin"),
           "/package/mypkg/v1.0/runtimelibs_v2.jar",
           null
       );
-      expected = Utils.makeMap(
+      expected = Map.of(
           ":files:/package/mypkg/v1.0/runtimelibs_v2.jar:name", "runtimelibs_v2.jar",
-          ":files:/package/mypkg/v1.0[0]:sha512",
+          ":files:/package/mypkg/v1.0/runtimelibs_v2.jar:sha512",
           "bc5ce45ad281b6a08fb7e529b1eb475040076834816570902acb6ebdd809410e31006efdeaa7f78a6c35574f3504963f5f7e4d92247d0eb4db3fc9abdda5d417"
-
       );
-      waitForAllNodesHaveFile(cluster,"/package/mypkg/v1.0/runtimelibs_v2.jar", expected, false);
-
-
-      expected = Utils.makeMap(
+      checkAllNodesForFile(cluster,"/package/mypkg/v1.0/runtimelibs_v2.jar", expected, false);
+      expected = Map.of(
           ":files:/package/mypkg/v1.0", (Predicate<Object>) o -> {
-            List l = (List) o;
+            List<?> l = (List<?>) o;
             assertEquals(2, l.size());
-            Set expectedKeys = ImmutableSet.of("runtimelibs_v2.jar", "runtimelibs.jar");
+            Set<String> expectedKeys = Set.of("runtimelibs_v2.jar", "runtimelibs.jar");
             for (Object file : l) {
               if(! expectedKeys.contains(Utils.getObjectByPath(file, true, "name"))) return false;
             }
-
             return true;
           }
       );
       for (JettySolrRunner jettySolrRunner : cluster.getJettySolrRunners()) {
         String baseUrl = jettySolrRunner.getBaseUrl().toString().replace("/solr", "/api");
         String url = baseUrl + "/node/files/package/mypkg/v1.0?wt=javabin";
-
         assertResponseValues(10, new Fetcher(url, jettySolrRunner), expected);
-
       }
-
-
-
+      // Delete Jars
+      DistribPackageStore.deleteZKFileEntry(cluster.getZkClient(), "/package/mypkg/v1.0/runtimelibs.jar");
+      JettySolrRunner j = cluster.getRandomJetty(random());
+      String path = j.getBaseURLV2() + "/cluster/files" + "/package/mypkg/v1.0/runtimelibs.jar";
+      HttpDelete del = new HttpDelete(path);
+      try(HttpSolrClient cl = (HttpSolrClient) j.newClient()) {
+        Utils.executeHttpMethod(cl.getHttpClient(), path, Utils.JSONCONSUMER, del);
+      }
+      expected = Collections.singletonMap(":files:/package/mypkg/v1.0/runtimelibs.jar", null);
+      checkAllNodesForFile(cluster,"/package/mypkg/v1.0/runtimelibs.jar", expected, false);
     } finally {
       cluster.shutdown();
     }
   }
 
-  public static void waitForAllNodesHaveFile(MiniSolrCloudCluster cluster, String path, Map expected , boolean verifyContent) throws Exception {
+  public static void checkAllNodesForFile(MiniSolrCloudCluster cluster, String path, Map<String, Object> expected , boolean verifyContent) throws Exception {
     for (JettySolrRunner jettySolrRunner : cluster.getJettySolrRunners()) {
       String baseUrl = jettySolrRunner.getBaseUrl().toString().replace("/solr", "/api");
       String url = baseUrl + "/node/files" + path + "?wt=javabin&meta=true";
@@ -186,10 +188,11 @@ public class TestDistribPackageStore extends SolrCloudTestCase {
     }
   }
 
-  static class Fetcher implements Callable {
+
+  public static class Fetcher implements Callable<NavigableObject> {
     String url;
     JettySolrRunner jetty;
-    Fetcher(String s, JettySolrRunner jettySolrRunner){
+    public Fetcher(String s, JettySolrRunner jettySolrRunner){
       this.url = s;
       this.jetty = jettySolrRunner;
     }
@@ -207,13 +210,26 @@ public class TestDistribPackageStore extends SolrCloudTestCase {
 
   }
 
-  public static NavigableObject assertResponseValues(int repeats, SolrClient client, SolrRequest req, Map vals) throws Exception {
+  public static NavigableObject assertResponseValues(int repeats, SolrClient client,
+                                                     SolrRequest<?> req,
+                                                     Map<String, Object> vals) throws Exception {
     Callable<NavigableObject> callable = () -> req.process(client);
 
     return assertResponseValues(repeats, callable,vals);
   }
 
-  public static NavigableObject assertResponseValues(int repeats,  Callable<NavigableObject> callable,Map vals) throws Exception {
+  /**
+   * Evaluate the given predicates or objects against the given values, obtained by running a given callable.
+   * The values to verify are either predicates to evaluate directly, or strings to compare for equality.
+   * @param repeats how many attempts to make with the Callable
+   * @param callable the code to execute getting a result
+   * @param vals the values to check in the result, this is a map of paths to predicates or values
+   * @return the final passing result of the callable
+   * @throws Exception if the callable throws an Exception, or on interrupt between retries
+   */
+  @SuppressWarnings({"unchecked"})
+  public static NavigableObject assertResponseValues(int repeats,  Callable<NavigableObject> callable,
+                                                     Map<String, Object> vals) throws Exception {
     NavigableObject rsp = null;
 
     for (int i = 0; i < repeats; i++) {
@@ -226,24 +242,29 @@ public class TestDistribPackageStore extends SolrCloudTestCase {
         if (i >= repeats - 1) throw e;
         continue;
       }
-      for (Object e : vals.entrySet()) {
-        Map.Entry entry = (Map.Entry) e;
-        String k = (String) entry.getKey();
+      boolean passed = true;
+      for (Map.Entry<String, Object> entry : vals.entrySet()) {
+        String k = entry.getKey();
         List<String> key = StrUtils.split(k, '/');
 
         Object val = entry.getValue();
-        Predicate p = val instanceof Predicate ? (Predicate) val : o -> {
-          String v = o == null ? null : String.valueOf(o);
-          return Objects.equals(val, o);
+        // TODO: This map should just be <String,Predicate> and we should instead provide a static eq() method for callers
+        Predicate<Object> p = val instanceof Predicate ? (Predicate<Object>) val : o -> {
+          String v = o == null ? null : o.toString();
+          return Objects.equals(val, v);
         };
-        boolean isPass = p.test(rsp._get(key, null));
-        if (isPass) return rsp;
-        else if (i >= repeats - 1) {
-          fail("req: " + callable.toString() +" . attempt: " + i + " Mismatch for value : '" + key + "' in response , " + Utils.toJSONString(rsp));
+        Object actual = rsp._get(key, null);
+        passed = passed && p.test(actual); // Important: check all of the values, not just the first one
+        if (!passed && i >= repeats - 1) {
+          String description = Utils.toJSONString(rsp);
+          if (rsp instanceof SimpleSolrResponse) {
+            description = ((SimpleSolrResponse) rsp).getResponse().jsonStr();
+          }
+          // we know these are unequal but call assert instead of fail() because it gives a better error message
+          assertEquals("Failed on path " + key + " of " + description + "after attempt #" + (i+1),
+              val, Utils.toJSONString(actual));
         }
-
       }
-
     }
     return rsp;
   }
@@ -251,12 +272,11 @@ public class TestDistribPackageStore extends SolrCloudTestCase {
   public static void uploadKey(byte[] bytes, String path, MiniSolrCloudCluster cluster) throws Exception {
     JettySolrRunner jetty = cluster.getRandomJetty(random());
     try(HttpSolrClient client = (HttpSolrClient) jetty.newClient()) {
-      PackageUtils.uploadKey(bytes, path, jetty.getCoreContainer().getResourceLoader().getInstancePath(), client);
+      PackageUtils.uploadKey(bytes, path, Paths.get(jetty.getCoreContainer().getSolrHome()), client);
       Object resp = Utils.executeGET(client.getHttpClient(), jetty.getBaseURLV2().toString() + "/node/files" + path + "?sync=true", null);
-      System.out.println("sync resp: "+jetty.getBaseURLV2().toString() + "/node/files" + path + "?sync=true"+" ,is: "+resp);
+      System.out.println("sync resp: "+jetty.getBaseURLV2().toString() + "/node/files" + path + "?sync=true" + " ,is: " + resp);
     }
-    waitForAllNodesHaveFile(cluster,path, Utils.makeMap(":files:" + path + ":name", (Predicate<Object>) Objects::nonNull),
-        false);
+    checkAllNodesForFile(cluster,path, Map.of(":files:" + path + ":name", (Predicate<Object>) Objects::nonNull), false);
   }
 
   public static void postFile(SolrClient client, ByteBuffer buffer, String name, String sig)
@@ -275,12 +295,15 @@ public class TestDistribPackageStore extends SolrCloudTestCase {
     assertEquals(name, rsp.getResponse().get(CommonParams.FILE));
   }
 
+  /**
+   * Read and return the contents of the file-like resource
+   * @param fname the name of the resource to read
+   * @return the bytes of the resource
+   * @throws IOException if there is an I/O error reading the contents
+   */
   public static byte[] readFile(String fname) throws IOException {
-    byte[] buf = null;
-    try (FileInputStream fis = new FileInputStream(getFile(fname))) {
-      buf = new byte[fis.available()];
-      fis.read(buf);
+    try (InputStream is = TestDistribPackageStore.class.getClassLoader().getResourceAsStream(fname)) {
+      return is.readAllBytes();
     }
-    return buf;
   }
 }
