@@ -17,14 +17,11 @@
 
 package org.apache.solr.pkg;
 
-import java.io.IOException;
-import java.nio.ByteBuffer;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.Map;
-import java.util.concurrent.Callable;
-
 import org.apache.commons.codec.digest.DigestUtils;
+import org.apache.lucene.analysis.core.WhitespaceTokenizerFactory;
+import org.apache.lucene.analysis.pattern.PatternReplaceCharFilterFactory;
+import org.apache.lucene.util.ResourceLoader;
+import org.apache.lucene.util.ResourceLoaderAware;
 import org.apache.solr.client.solrj.SolrClient;
 import org.apache.solr.client.solrj.SolrQuery;
 import org.apache.solr.client.solrj.SolrRequest;
@@ -32,62 +29,146 @@ import org.apache.solr.client.solrj.SolrServerException;
 import org.apache.solr.client.solrj.embedded.JettySolrRunner;
 import org.apache.solr.client.solrj.impl.BaseHttpSolrClient;
 import org.apache.solr.client.solrj.impl.HttpSolrClient;
-import org.apache.solr.client.solrj.request.CollectionAdminRequest;
-import org.apache.solr.client.solrj.request.GenericSolrRequest;
-import org.apache.solr.client.solrj.request.RequestWriter;
-import org.apache.solr.client.solrj.request.UpdateRequest;
-import org.apache.solr.client.solrj.request.V2Request;
+import org.apache.solr.client.solrj.request.*;
 import org.apache.solr.client.solrj.request.beans.Package;
 import org.apache.solr.client.solrj.response.QueryResponse;
 import org.apache.solr.client.solrj.util.ClientUtils;
-import org.apache.solr.cloud.ConfigRequest;
 import org.apache.solr.cloud.MiniSolrCloudCluster;
 import org.apache.solr.cloud.SolrCloudTestCase;
 import org.apache.solr.common.MapWriterMap;
 import org.apache.solr.common.NavigableObject;
 import org.apache.solr.common.SolrInputDocument;
+import org.apache.solr.common.annotation.JsonProperty;
 import org.apache.solr.common.params.MapSolrParams;
 import org.apache.solr.common.params.ModifiableSolrParams;
 import org.apache.solr.common.params.SolrParams;
+import org.apache.solr.common.util.ReflectMapWriter;
 import org.apache.solr.common.util.Utils;
+import org.apache.solr.core.SolrCore;
 import org.apache.solr.filestore.PackageStoreAPI;
 import org.apache.solr.filestore.TestDistribPackageStore;
+import org.apache.solr.handler.RequestHandlerBase;
+import org.apache.solr.request.SolrQueryRequest;
+import org.apache.solr.response.SolrQueryResponse;
+import org.apache.solr.search.QParser;
+import org.apache.solr.search.QParserPlugin;
 import org.apache.solr.util.LogLevel;
+import org.apache.solr.util.SimplePostTool;
+import org.apache.solr.util.plugin.SolrCoreAware;
 import org.apache.zookeeper.data.Stat;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
 
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.nio.ByteBuffer;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.concurrent.Callable;
+import java.util.zip.ZipEntry;
+import java.util.zip.ZipOutputStream;
+
 import static org.apache.solr.common.cloud.ZkStateReader.SOLR_PKGS_PATH;
 import static org.apache.solr.common.params.CommonParams.JAVABIN;
 import static org.apache.solr.common.params.CommonParams.WT;
-import static org.apache.solr.core.TestDynamicLoading.getFileContent;
-import static org.apache.solr.filestore.TestDistribPackageStore.readFile;
-import static org.apache.solr.filestore.TestDistribPackageStore.uploadKey;
-import static org.apache.solr.filestore.TestDistribPackageStore.waitForAllNodesHaveFile;
+import static org.apache.solr.core.TestSolrConfigHandler.getFileContent;
+import static org.apache.solr.filestore.TestDistribPackageStore.*;
 
 @LogLevel("org.apache.solr.pkg.PackageLoader=DEBUG;org.apache.solr.pkg.PackageAPI=DEBUG")
-//@org.apache.lucene.util.LuceneTestCase.AwaitsFix(bugUrl="https://issues.apache.org/jira/browse/SOLR-13822") // leaks files
 public class TestPackages extends SolrCloudTestCase {
 
   @Before
-  public void setup() {
+  @Override
+  public void setUp() throws Exception {
+    super.setUp();
     System.setProperty("enable.packages", "true");
+    configureCluster(4)
+        .withJettyConfig(jetty -> jetty.enableV2(true))
+        .addConfig("conf", configset("conf2"))
+        .addConfig("conf1", configset("schema-package"))
+        .configure();
   }
-  
+
   @After
-  public void teardown() {
+  @Override
+  public void tearDown() throws Exception {
+    if (cluster != null) {
+      cluster.shutdown();
+    }
     System.clearProperty("enable.packages");
+
+    super.tearDown();
   }
-  
+
+  public static class ConfigPlugin implements ReflectMapWriter {
+    @JsonProperty
+    public String name;
+
+    @JsonProperty("class")
+    public String klass;
+  }
+
+
+  @Test
+  public void testCoreReloadingPlugin() throws Exception {
+      String FILE1 = "/mypkg/runtimelibs.jar";
+      String COLLECTION_NAME = "testCoreReloadingPluginColl";
+      byte[] derFile = readFile("cryptokeys/pub_key512.der");
+      uploadKey(derFile, PackageStoreAPI.KEYS_DIR+"/pub_key512.der", cluster);
+      postFileAndWait(cluster, "runtimecode/runtimelibs.jar.bin", FILE1,
+              "L3q/qIGs4NaF6JiO0ZkMUFa88j0OmYc+I6O7BOdNuMct/xoZ4h73aZHZGc0+nmI1f/U3bOlMPINlSOM6LK3JpQ==");
+
+      Package.AddVersion add = new Package.AddVersion();
+      add.version = "1.0";
+      add.pkg = "mypkg";
+      add.files = Arrays.asList(new String[]{FILE1});
+      V2Request req = new V2Request.Builder("/cluster/package")
+              .forceV2(true)
+              .withMethod(SolrRequest.METHOD.POST)
+              .withPayload(Collections.singletonMap("add", add))
+              .build();
+
+      req.process(cluster.getSolrClient());
+      TestDistribPackageStore.assertResponseValues(10,
+              () -> new V2Request.Builder("/cluster/package").
+                      withMethod(SolrRequest.METHOD.GET)
+                      .build().process(cluster.getSolrClient()),
+              Map.of(
+                      ":result:packages:mypkg[0]:version", "1.0",
+                      ":result:packages:mypkg[0]:files[0]", FILE1
+              ));
+
+      CollectionAdminRequest
+              .createCollection(COLLECTION_NAME, "conf", 2, 2)
+              .process(cluster.getSolrClient());
+      cluster.waitForActiveCollection(COLLECTION_NAME, 2, 4);
+
+      verifyComponent(cluster.getSolrClient(), COLLECTION_NAME, "query", "filterCache", add.pkg, add.version);
+
+
+      add.version = "2.0";
+      req.process(cluster.getSolrClient());
+      TestDistribPackageStore.assertResponseValues(10,
+              () -> new V2Request.Builder("/cluster/package").
+                      withMethod(SolrRequest.METHOD.GET)
+                      .build().process(cluster.getSolrClient()),
+              Map.of(
+                      ":result:packages:mypkg[1]:version", "2.0",
+                      ":result:packages:mypkg[1]:files[0]", FILE1
+              ));
+      new UpdateRequest().commit(cluster.getSolrClient(), COLLECTION_NAME);
+
+      verifyComponent(cluster.getSolrClient(),
+              COLLECTION_NAME, "query", "filterCache",
+              "mypkg", "2.0" );
+  }
+
   @Test
   public void testPluginLoading() throws Exception {
-    MiniSolrCloudCluster cluster =
-        configureCluster(4)
-            .withJettyConfig(jetty -> jetty.enableV2(true))
-            .addConfig("conf", configset("cloud-minimal"))
-            .configure();
-    try {
       String FILE1 = "/mypkg/runtimelibs.jar";
       String FILE2 = "/mypkg/runtimelibs_v2.jar";
       String FILE3 = "/mypkg/runtimelibs_v3.jar";
@@ -97,8 +178,6 @@ public class TestPackages extends SolrCloudTestCase {
       String COLLECTION_NAME = "testPluginLoadingColl";
       byte[] derFile = readFile("cryptokeys/pub_key512.der");
       uploadKey(derFile, PackageStoreAPI.KEYS_DIR+"/pub_key512.der", cluster);
-//      cluster.getZkClient().makePath("/keys/exe", true);
-//      cluster.getZkClient().create("/keys/exe/pub_key512.der", derFile, CreateMode.PERSISTENT, true);
       postFileAndWait(cluster, "runtimecode/runtimelibs.jar.bin", FILE1,
           "L3q/qIGs4NaF6JiO0ZkMUFa88j0OmYc+I6O7BOdNuMct/xoZ4h73aZHZGc0+nmI1f/U3bOlMPINlSOM6LK3JpQ==");
 
@@ -123,7 +202,6 @@ public class TestPackages extends SolrCloudTestCase {
 
       CollectionAdminRequest
           .createCollection(COLLECTION_NAME, "conf", 2, 2)
-          .setMaxShardsPerNode(100)
           .process(cluster.getSolrClient());
       cluster.waitForActiveCollection(COLLECTION_NAME, 2, 4);
 
@@ -131,52 +209,71 @@ public class TestPackages extends SolrCloudTestCase {
           () -> new V2Request.Builder("/cluster/package").
               withMethod(SolrRequest.METHOD.GET)
               .build().process(cluster.getSolrClient()),
-          Utils.makeMap(
+          Map.of(
               ":result:packages:mypkg[0]:version", "1.0",
               ":result:packages:mypkg[0]:files[0]", FILE1
           ));
+      Map<String,ConfigPlugin> plugins = new LinkedHashMap<>();
+      ConfigPlugin p = new ConfigPlugin();
+      p.klass = "mypkg:org.apache.solr.core.RuntimeLibReqHandler";
+      p.name = "/runtime";
+      plugins.put("create-requesthandler", p);
 
-      String payload = "{\n" +
-          "'create-requesthandler' : { 'name' : '/runtime', 'class': 'mypkg:org.apache.solr.core.RuntimeLibReqHandler' }," +
-          "'create-searchcomponent' : { 'name' : 'get', 'class': 'mypkg:org.apache.solr.core.RuntimeLibSearchComponent'  }," +
-          "'create-queryResponseWriter' : { 'name' : 'json1', 'class': 'mypkg:org.apache.solr.core.RuntimeLibResponseWriter' }" +
-          "'create-updateProcessor' : { 'name' : 'myurp', 'class': 'mypkg:org.apache.solr.update.TestVersionedURP' }," +
-          " create-expressible: {name: mincopy , class: 'mypkg:org.apache.solr.client.solrj.io.stream.metrics.MinCopyMetric'}" +
-          "}";
-      cluster.getSolrClient().request(new ConfigRequest(payload) {
-        @Override
-        public String getCollection() {
-          return COLLECTION_NAME;
-        }
-      });
+      p = new ConfigPlugin();
+      p.klass = "mypkg:org.apache.solr.core.RuntimeLibSearchComponent";
+      p.name = "get";
+      plugins.put("create-searchcomponent", p);
 
-      verifyCmponent(cluster.getSolrClient(),
+      p = new ConfigPlugin();
+      p.klass = "mypkg:org.apache.solr.core.RuntimeLibResponseWriter";
+      p.name = "json1";
+      plugins.put("create-queryResponseWriter", p);
+
+      p = new ConfigPlugin();
+      p.klass = "mypkg:org.apache.solr.update.TestVersionedURP";
+      p.name = "myurp";
+      plugins.put("create-updateProcessor", p);
+
+      p = new ConfigPlugin();
+      p.klass = "mypkg:org.apache.solr.client.solrj.io.stream.metrics.MinCopyMetric";
+      p.name = "mincopy";
+      plugins.put("create-expressible", p);
+
+
+      V2Request v2r = new V2Request.Builder( "/c/"+COLLECTION_NAME+ "/config")
+              .withMethod(SolrRequest.METHOD.POST)
+              .withPayload(plugins)
+              .forceV2(true)
+              .build();
+      cluster.getSolrClient().request(v2r);
+
+      verifyComponent(cluster.getSolrClient(),
           COLLECTION_NAME, "queryResponseWriter", "json1",
           "mypkg", "1.0" );
 
-      verifyCmponent(cluster.getSolrClient(),
+      verifyComponent(cluster.getSolrClient(),
           COLLECTION_NAME, "searchComponent", "get",
           "mypkg", "1.0" );
 
-      verifyCmponent(cluster.getSolrClient(),
+      verifyComponent(cluster.getSolrClient(),
           COLLECTION_NAME, "requestHandler", "/runtime",
           "mypkg", "1.0" );
 
-      verifyCmponent(cluster.getSolrClient(),
+      verifyComponent(cluster.getSolrClient(),
           COLLECTION_NAME, "updateProcessor", "myurp",
           "mypkg", "1.0" );
 
-      verifyCmponent(cluster.getSolrClient(),
+      verifyComponent(cluster.getSolrClient(),
           COLLECTION_NAME, "expressible", "mincopy",
           "mypkg", "1.0" );
 
       TestDistribPackageStore.assertResponseValues(10,
           cluster.getSolrClient() ,
           new GenericSolrRequest(SolrRequest.METHOD.GET,
-              "/stream", new MapSolrParams((Map) Utils.makeMap("collection", COLLECTION_NAME,
+              "/stream", new MapSolrParams(Map.of("collection", COLLECTION_NAME,
                   WT, JAVABIN,
                   "action", "plugins"
-                  ))), Utils.makeMap(
+                  ))), Map.of(
               ":plugins:mincopy", "org.apache.solr.client.solrj.io.stream.metrics.MinCopyMetric"
           ));
 
@@ -193,17 +290,16 @@ public class TestPackages extends SolrCloudTestCase {
 
       executeReq( "/" + COLLECTION_NAME + "/runtime?wt=javabin", cluster.getRandomJetty(random()),
           Utils.JAVABINCONSUMER,
-          Utils.makeMap("class", "org.apache.solr.core.RuntimeLibReqHandler"));
+          Map.of("class", "org.apache.solr.core.RuntimeLibReqHandler"));
 
       executeReq( "/" + COLLECTION_NAME + "/get?wt=json", cluster.getRandomJetty(random()),
           Utils.JSONCONSUMER,
-          Utils.makeMap("class", "org.apache.solr.core.RuntimeLibSearchComponent",
-              "Version","1"));
+          Map.of("Version","1"));
 
 
       executeReq( "/" + COLLECTION_NAME + "/runtime?wt=json1", cluster.getRandomJetty(random()),
           Utils.JSONCONSUMER,
-          Utils.makeMap("wt", "org.apache.solr.core.RuntimeLibResponseWriter"));
+          Map.of("wt", "org.apache.solr.core.RuntimeLibResponseWriter"));
 
       //now upload the second jar
       postFileAndWait(cluster, "runtimecode/runtimelibs_v2.jar.bin", FILE2,
@@ -216,26 +312,26 @@ public class TestPackages extends SolrCloudTestCase {
       add.files = Arrays.asList(new String[]{FILE2,URP2, EXPR1});
       req.process(cluster.getSolrClient());
 
-      verifyCmponent(cluster.getSolrClient(),
+      verifyComponent(cluster.getSolrClient(),
           COLLECTION_NAME, "queryResponseWriter", "json1",
           "mypkg", "1.1" );
 
-      verifyCmponent(cluster.getSolrClient(),
+      verifyComponent(cluster.getSolrClient(),
           COLLECTION_NAME, "searchComponent", "get",
           "mypkg", "1.1" );
 
-      verifyCmponent(cluster.getSolrClient(),
+      verifyComponent(cluster.getSolrClient(),
           COLLECTION_NAME, "requestHandler", "/runtime",
           "mypkg", "1.1" );
 
-      verifyCmponent(cluster.getSolrClient(),
+      verifyComponent(cluster.getSolrClient(),
           COLLECTION_NAME, "updateProcessor", "myurp",
           "mypkg", "1.1" );
 
 
       executeReq( "/" + COLLECTION_NAME + "/get?wt=json", cluster.getRandomJetty(random()),
           Utils.JSONCONSUMER,
-          Utils.makeMap(  "Version","2"));
+          Map.of(  "Version","2"));
 
 
       //now upload the third jar
@@ -247,21 +343,21 @@ public class TestPackages extends SolrCloudTestCase {
       req.process(cluster.getSolrClient());
 
       //now let's verify that the classes are updated
-      verifyCmponent(cluster.getSolrClient(),
+      verifyComponent(cluster.getSolrClient(),
           COLLECTION_NAME, "queryResponseWriter", "json1",
           "mypkg", "2.1" );
 
-      verifyCmponent(cluster.getSolrClient(),
+      verifyComponent(cluster.getSolrClient(),
           COLLECTION_NAME, "searchComponent", "get",
           "mypkg", "2.1" );
 
-      verifyCmponent(cluster.getSolrClient(),
+      verifyComponent(cluster.getSolrClient(),
           COLLECTION_NAME, "requestHandler", "/runtime",
           "mypkg", "2.1" );
 
       executeReq( "/" + COLLECTION_NAME + "/runtime?wt=json", cluster.getRandomJetty(random()),
           Utils.JSONCONSUMER,
-          Utils.makeMap("Version","2"));
+          Map.of("Version","2"));
 
       //insert a doc with urp
       ur = new UpdateRequest();
@@ -286,15 +382,15 @@ public class TestPackages extends SolrCloudTestCase {
           .build();
       delete.process(cluster.getSolrClient());
 
-      verifyCmponent(cluster.getSolrClient(),
+      verifyComponent(cluster.getSolrClient(),
           COLLECTION_NAME, "queryResponseWriter", "json1",
           "mypkg", "2.1" );
 
-      verifyCmponent(cluster.getSolrClient(),
+      verifyComponent(cluster.getSolrClient(),
           COLLECTION_NAME, "searchComponent", "get",
           "mypkg", "2.1" );
 
-      verifyCmponent(cluster.getSolrClient(),
+      verifyComponent(cluster.getSolrClient(),
           COLLECTION_NAME, "requestHandler", "/runtime",
           "mypkg", "2.1" );
 
@@ -302,15 +398,15 @@ public class TestPackages extends SolrCloudTestCase {
       delVersion.version = "2.1";
       delete.process(cluster.getSolrClient());
 
-      verifyCmponent(cluster.getSolrClient(),
+      verifyComponent(cluster.getSolrClient(),
           COLLECTION_NAME, "queryResponseWriter", "json1",
           "mypkg", "1.1" );
 
-      verifyCmponent(cluster.getSolrClient(),
+      verifyComponent(cluster.getSolrClient(),
           COLLECTION_NAME, "searchComponent", "get",
           "mypkg", "1.1" );
 
-      verifyCmponent(cluster.getSolrClient(),
+      verifyComponent(cluster.getSolrClient(),
           COLLECTION_NAME, "requestHandler", "/runtime",
           "mypkg", "1.1" );
 
@@ -331,15 +427,15 @@ public class TestPackages extends SolrCloudTestCase {
       //the collections mypkg is set to use version 1.1
       //so no upgrade
 
-      verifyCmponent(cluster.getSolrClient(),
+      verifyComponent(cluster.getSolrClient(),
           COLLECTION_NAME, "queryResponseWriter", "json1",
           "mypkg", "1.1" );
 
-      verifyCmponent(cluster.getSolrClient(),
+      verifyComponent(cluster.getSolrClient(),
           COLLECTION_NAME, "searchComponent", "get",
           "mypkg", "1.1" );
 
-      verifyCmponent(cluster.getSolrClient(),
+      verifyComponent(cluster.getSolrClient(),
           COLLECTION_NAME, "requestHandler", "/runtime",
           "mypkg", "1.1" );
 
@@ -361,17 +457,38 @@ public class TestPackages extends SolrCloudTestCase {
           .process(cluster.getSolrClient());
 
 
-      verifyCmponent(cluster.getSolrClient(),
+      verifyComponent(cluster.getSolrClient(),
           COLLECTION_NAME, "queryResponseWriter", "json1",
           "mypkg", "2.1" );
 
-      verifyCmponent(cluster.getSolrClient(),
+      verifyComponent(cluster.getSolrClient(),
           COLLECTION_NAME, "searchComponent", "get",
           "mypkg", "2.1" );
 
-      verifyCmponent(cluster.getSolrClient(),
+      verifyComponent(cluster.getSolrClient(),
           COLLECTION_NAME, "requestHandler", "/runtime",
           "mypkg", "2.1" );
+
+      plugins.clear();
+      p = new ConfigPlugin();
+      p.name = "/rt_2";
+      p.klass = "mypkg:"+ C.class.getName();
+      plugins.put("create-requesthandler", p);
+
+      p = new ConfigPlugin();
+      p.name = "qp1";
+      p.klass = "mypkg:"+ C2.class.getName();
+      plugins.put("create-queryparser", p);
+
+      v2r = new V2Request.Builder( "/c/"+COLLECTION_NAME+ "/config")
+          .withMethod(SolrRequest.METHOD.POST)
+          .withPayload(plugins)
+          .forceV2(true)
+          .build();
+      cluster.getSolrClient().request(v2r);
+      assertTrue(C.informCalled);
+      assertTrue(C2.informCalled);
+
       //we create a new node. This node does not have the packages. But it should download it from another node
       JettySolrRunner jetty = cluster.startJettySolrRunner();
       //create a new replica for this collection. it should end up
@@ -380,48 +497,28 @@ public class TestPackages extends SolrCloudTestCase {
           .setNode(jetty.getNodeName())
           .process(cluster.getSolrClient());
       cluster.waitForActiveCollection(COLLECTION_NAME, 2, 5);
-      waitForAllNodesHaveFile(cluster,FILE3,
-          Utils.makeMap(":files:" + FILE3 + ":name", "runtimelibs_v3.jar"),
+      checkAllNodesForFile(cluster,FILE3,
+          Map.of(":files:" + FILE3 + ":name", "runtimelibs_v3.jar"),
           false);
-
-    } finally {
-      cluster.shutdown();
-    }
-
   }
-   /* new V2Request.Builder("/c/"+COLLECTIONORALIAS+"/config").withMethod(SolrRequest.METHOD.POST)
-        .withPayload("{add-expressible: {name: mincopy , class: org.apache.solr.client.solrj.io.stream.metrics.MinCopyMetric}}")
-    .build().process(cluster.getSolrClient());
-
-  ModifiableSolrParams _params = new ModifiableSolrParams();
-  QueryRequest query = new QueryRequest(new MapSolrParams("action","plugins", "collection", COLLECTIONORALIAS, "wt", "javabin"));
-    query.setPath("/stream");
-  NamedList<Object> rsp = cluster.getSolrClient().request(query);
-  assertEquals("org.apache.solr.client.solrj.io.stream.metrics.MinCopyMetric", rsp._getStr("/plugins/mincopy", null));
-  _params = new ModifiableSolrParams();
-  query = new QueryRequest(new MapSolrParams("componentName","mincopy", "meta" ,"true", "collection", COLLECTIONORALIAS, "wt", "javabin"));
-    query.setPath("/config/expressible");
-  rsp = cluster.getSolrClient().request(query);
-
-    System.out.println();*/
-
-  private void executeReq(String uri, JettySolrRunner jetty, Utils.InputStreamConsumer parser, Map expected) throws Exception {
+  @SuppressWarnings("unchecked")
+  private void executeReq(String uri, JettySolrRunner jetty, Utils.InputStreamConsumer<?> parser, Map<String, Object> expected) throws Exception {
     try(HttpSolrClient client = (HttpSolrClient) jetty.newClient()){
       TestDistribPackageStore.assertResponseValues(10,
           () -> {
             Object o = Utils.executeGET(client.getHttpClient(),
                 jetty.getBaseUrl() + uri, parser);
             if(o instanceof NavigableObject) return (NavigableObject) o;
-            if(o instanceof Map) return new MapWriterMap((Map) o);
+            if(o instanceof Map) return new MapWriterMap((Map<String, Object>) o);
             throw new RuntimeException("Unknown response");
           }, expected);
 
     }
   }
 
-  private void verifyCmponent(SolrClient client, String COLLECTION_NAME,
-  String componentType, String componentName, String pkg, String version) throws Exception {
-    SolrParams params = new MapSolrParams((Map) Utils.makeMap("collection", COLLECTION_NAME,
+  private void verifyComponent(SolrClient client, String COLLECTION_NAME,
+                               String componentType, String componentName, String pkg, String version) throws Exception {
+    SolrParams params = new MapSolrParams(Map.of("collection", COLLECTION_NAME,
         WT, JAVABIN,
         "componentName", componentName,
         "meta", "true"));
@@ -430,21 +527,15 @@ public class TestPackages extends SolrCloudTestCase {
         "/config/" + componentType, params);
     TestDistribPackageStore.assertResponseValues(10,
         client,
-        req1, Utils.makeMap(
+        req1, Map.of(
             ":config:" + componentType + ":" + componentName + ":_packageinfo_:package", pkg,
             ":config:" + componentType + ":" + componentName + ":_packageinfo_:version", version
         ));
   }
 
   @Test
+  @SuppressWarnings("unchecked")
   public void testAPI() throws Exception {
-    System.setProperty("enable.packages", "true");
-    MiniSolrCloudCluster cluster =
-        configureCluster(4)
-            .withJettyConfig(jetty -> jetty.enableV2(true))
-            .addConfig("conf", configset("cloud-minimal"))
-            .configure();
-    try {
       String errPath = "/error/details[0]/errorMessages[0]";
       String FILE1 = "/mypkg/v.0.12/jar_a.jar";
       String FILE2 = "/mypkg/v.0.12/jar_b.jar";
@@ -453,7 +544,7 @@ public class TestPackages extends SolrCloudTestCase {
       Package.AddVersion add = new Package.AddVersion();
       add.version = "0.12";
       add.pkg = "test_pkg";
-      add.files = Arrays.asList(new String[]{FILE1, FILE2});
+      add.files = List.of(FILE1, FILE2);
       V2Request req = new V2Request.Builder("/cluster/package")
           .forceV2(true)
           .withMethod(SolrRequest.METHOD.POST)
@@ -468,7 +559,7 @@ public class TestPackages extends SolrCloudTestCase {
       postFileAndWait(cluster, "runtimecode/runtimelibs.jar.bin", FILE1, null);
 
 
-      add.files = Arrays.asList(new String[]{FILE1});
+      add.files = Collections.singletonList(FILE1);
       expectError(req, cluster.getSolrClient(), errPath,
           FILE1 + " has no signature");
       //now we upload the keys
@@ -479,13 +570,11 @@ public class TestPackages extends SolrCloudTestCase {
           "L3q/qIGs4NaF6JiO0ZkMUFa88j0OmYc+I6O7BOdNuMct/xoZ4h73aZHZGc0+nmI1f/U3bOlMPINlSOM6LK3JpQ==");
       // with correct signature
       //after uploading the file, let's delete the keys to see if we get proper error message
-//      cluster.getZkClient().delete("/keys/exe/pub_key512.der", -1, true);
-      add.files = Arrays.asList(new String[]{FILE2});
+      add.files = Collections.singletonList(FILE2);
       /*expectError(req, cluster.getSolrClient(), errPath,
           "ZooKeeper does not have any public keys");*/
 
       //Now lets' put the keys back
-//      cluster.getZkClient().create("/keys/exe/pub_key512.der", derFile, CreateMode.PERSISTENT, true);
 
       //this time we have a file with proper signature, public keys are in ZK
       // so the add {} command should succeed
@@ -493,11 +582,11 @@ public class TestPackages extends SolrCloudTestCase {
 
       //Now verify the data in ZK
       TestDistribPackageStore.assertResponseValues(1,
-          () -> new MapWriterMap((Map) Utils.fromJSON(cluster.getZkClient().getData(SOLR_PKGS_PATH,
+          () -> new MapWriterMap((Map<String,Object>) Utils.fromJSON(cluster.getZkClient().getData(SOLR_PKGS_PATH,
               null, new Stat(), true))),
-          Utils.makeMap(
+          Map.of(
               ":packages:test_pkg[0]:version", "0.12",
-              ":packages:test_pkg[0]:files[0]", FILE1
+              ":packages:test_pkg[0]:files[0]", FILE2
           ));
 
       //post a new jar with a proper signature
@@ -508,15 +597,15 @@ public class TestPackages extends SolrCloudTestCase {
       //this time we are adding the second version of the package (0.13)
       add.version = "0.13";
       add.pkg = "test_pkg";
-      add.files = Arrays.asList(new String[]{FILE3});
+      add.files = Collections.singletonList(FILE3);
 
       //this request should succeed
       req.process(cluster.getSolrClient());
       //no verify the data (/packages.json) in ZK
       TestDistribPackageStore.assertResponseValues(1,
-          () -> new MapWriterMap((Map) Utils.fromJSON(cluster.getZkClient().getData(SOLR_PKGS_PATH,
+          () -> new MapWriterMap((Map<String,Object>) Utils.fromJSON(cluster.getZkClient().getData(SOLR_PKGS_PATH,
               null, new Stat(), true))),
-          Utils.makeMap(
+          Map.of(
               ":packages:test_pkg[1]:version", "0.13",
               ":packages:test_pkg[1]:files[0]", FILE3
           ));
@@ -536,15 +625,14 @@ public class TestPackages extends SolrCloudTestCase {
 
       delVersion.version = "0.12";//correct version. Should succeed
       req.process(cluster.getSolrClient());
-      //Verify with ZK that the data is correcy
+      //Verify with ZK that the data is correct
       TestDistribPackageStore.assertResponseValues(1,
-          () -> new MapWriterMap((Map) Utils.fromJSON(cluster.getZkClient().getData(SOLR_PKGS_PATH,
+          () -> new MapWriterMap((Map<String,Object>) Utils.fromJSON(cluster.getZkClient().getData(SOLR_PKGS_PATH,
               null, new Stat(), true))),
-          Utils.makeMap(
+          Map.of(
               ":packages:test_pkg[0]:version", "0.13",
-              ":packages:test_pkg[0]:files[0]", FILE2
+              ":packages:test_pkg[0]:files[0]", FILE3
           ));
-
 
       //So far we have been verifying the details with  ZK directly
       //use the package read API to verify with each node that it has the correct data
@@ -557,25 +645,141 @@ public class TestPackages extends SolrCloudTestCase {
               return (NavigableObject) Utils.executeGET(solrClient.getHttpClient(), path, Utils.JAVABINCONSUMER);
             }
           }
-        }, Utils.makeMap(
+        }, Map.of(
             ":result:packages:test_pkg[0]:version", "0.13",
             ":result:packages:test_pkg[0]:files[0]", FILE3
         ));
       }
-    } finally {
-      cluster.shutdown();
+  }
+  public static class C extends RequestHandlerBase implements SolrCoreAware   {
+    static boolean informCalled = false;
+
+    @Override
+    public void inform(SolrCore core) {
+      informCalled = true;
+
+    }
+
+    @Override
+    public void handleRequestBody(SolrQueryRequest req, SolrQueryResponse rsp) {
+
+    }
+
+    @Override
+    public String getDescription() {
+      return "test";
     }
   }
 
-  static void postFileAndWait(MiniSolrCloudCluster cluster, String fname, String path, String sig) throws Exception {
+  public static class C2 extends QParserPlugin implements ResourceLoaderAware {
+    static boolean informCalled = false;
+
+
+    @Override
+    public void inform(ResourceLoader loader) throws IOException {
+      informCalled = true;
+
+    }
+
+    @Override
+    public QParser createParser(String qstr, SolrParams localParams, SolrParams params, SolrQueryRequest req) {
+      return null;
+    }
+  }
+
+  @Test
+  public void testSchemaPlugins() throws Exception {
+    String COLLECTION_NAME = "testSchemaLoadingColl";
+    System.setProperty("managed.schema.mutable", "true");
+
+      String FILE1 = "/schemapkg/schema-plugins.jar";
+      byte[] derFile = readFile("cryptokeys/pub_key512.der");
+      uploadKey(derFile, PackageStoreAPI.KEYS_DIR+"/pub_key512.der", cluster);
+      postFileAndWait(cluster, "runtimecode/schema-plugins.jar.bin", FILE1,
+          "U+AdO/jgY3DtMpeFRGoTQk72iA5g/qjPvdQYPGBaXB5+ggcTZk4FoIWiueB0bwGJ8Mg3V/elxOqEbD2JR8R0tA==");
+
+      String FILE2 = "/schemapkg/payload-component.jar";
+      postFileAndWait(cluster, "runtimecode/payload-component.jar.bin", FILE2,
+          "gI6vYUDmSXSXmpNEeK1cwqrp4qTeVQgizGQkd8A4Prx2K8k7c5QlXbcs4lxFAAbbdXz9F4esBqTCiLMjVDHJ5Q==");
+
+      Package.AddVersion add = new Package.AddVersion();
+      add.version = "1.0";
+      add.pkg = "schemapkg";
+      add.files = Arrays.asList(FILE1,FILE2);
+      V2Request req = new V2Request.Builder("/cluster/package")
+          .forceV2(true)
+          .withMethod(SolrRequest.METHOD.POST)
+          .withPayload(Collections.singletonMap("add", add))
+          .build();
+      req.process(cluster.getSolrClient());
+
+      TestDistribPackageStore.assertResponseValues(10,
+          () -> new V2Request.Builder("/cluster/package").
+              withMethod(SolrRequest.METHOD.GET)
+              .build().process(cluster.getSolrClient()),
+          Map.of(
+              ":result:packages:schemapkg[0]:version", "1.0",
+              ":result:packages:schemapkg[0]:files[0]", FILE1
+          ));
+
+      CollectionAdminRequest
+              .createCollection(COLLECTION_NAME, "conf1", 2, 2)
+              .process(cluster.getSolrClient());
+      cluster.waitForActiveCollection(COLLECTION_NAME, 2, 4);
+
+      verifySchemaComponent(cluster.getSolrClient(), COLLECTION_NAME, "/schema/fieldtypes/myNewTextFieldWithAnalyzerClass",
+              Map.of(":fieldType:analyzer:charFilters[0]:_packageinfo_:version" ,"1.0",
+                      ":fieldType:analyzer:tokenizer:_packageinfo_:version","1.0",
+                      ":fieldType:_packageinfo_:version","1.0"));
+
+      add = new Package.AddVersion();
+      add.version = "2.0";
+      add.pkg = "schemapkg";
+      add.files = Arrays.asList(FILE1);
+      req = new V2Request.Builder("/cluster/package")
+          .forceV2(true)
+          .withMethod(SolrRequest.METHOD.POST)
+          .withPayload(Collections.singletonMap("add", add))
+          .build();
+      req.process(cluster.getSolrClient());
+
+      TestDistribPackageStore.assertResponseValues(10,
+          () -> new V2Request.Builder("/cluster/package").
+              withMethod(SolrRequest.METHOD.GET)
+              .build().process(cluster.getSolrClient()),
+          Map.of(
+              ":result:packages:schemapkg[1]:version", "2.0",
+              ":result:packages:schemapkg[1]:files[0]", FILE1
+          ));
+
+      verifySchemaComponent(cluster.getSolrClient(), COLLECTION_NAME, "/schema/fieldtypes/myNewTextFieldWithAnalyzerClass",
+          Map.of(":fieldType:analyzer:charFilters[0]:_packageinfo_:version" ,"2.0",
+              ":fieldType:analyzer:tokenizer:_packageinfo_:version","2.0",
+              ":fieldType:_packageinfo_:version","2.0"));
+  }
+  private void verifySchemaComponent(SolrClient client, String COLLECTION_NAME, String path,
+                                     Map<String, Object> expected) throws Exception {
+    SolrParams params = new MapSolrParams(Map.of("collection", COLLECTION_NAME,
+        WT, JAVABIN,
+        "meta", "true"));
+
+    GenericSolrRequest req = new GenericSolrRequest(SolrRequest.METHOD.GET,path
+        , params);
+    TestDistribPackageStore.assertResponseValues(10,
+        client,
+        req, expected);
+  }
+
+  public static void postFileAndWait(MiniSolrCloudCluster cluster, String fname, String path, String sig) throws Exception {
     ByteBuffer fileContent = getFileContent(fname);
+    @SuppressWarnings("ByteBufferBackingArray") // this is the result of a call to wrap()
     String sha512 = DigestUtils.sha512Hex(fileContent.array());
 
     TestDistribPackageStore.postFile(cluster.getSolrClient(),
         fileContent,
         path, sig);// has file, but no signature
 
-    TestDistribPackageStore.waitForAllNodesHaveFile(cluster, path, Utils.makeMap(
+    TestDistribPackageStore.checkAllNodesForFile(cluster, path, Map.of(
         ":files:" + path + ":sha512",
         sha512
     ), false);
@@ -592,4 +796,50 @@ public class TestPackages extends SolrCloudTestCase {
       );
     }
   }
+
+  public static class BasePatternReplaceCharFilterFactory extends PatternReplaceCharFilterFactory {
+    public BasePatternReplaceCharFilterFactory(Map<String, String> args) {
+      super(args);
+    }
+  }
+
+  public static class BaseWhitespaceTokenizerFactory extends WhitespaceTokenizerFactory {
+
+    public BaseWhitespaceTokenizerFactory(Map<String, String> args) {
+      super(args);
+    }
+  }
+
+  /*
+  //copy the jav files to a package and then run the main method
+  public static void main(String[] args) throws Exception {
+    persistZip("/tmp/x.jar", MyPatternReplaceCharFilterFactory.class, MyTextField.class, MyWhitespaceTokenizerFactory.class);
+  }*/
+
+
+  public static ByteBuffer persistZip(String loc, Class<?>... classes) throws IOException {
+    ByteBuffer jar = generateZip(classes);
+    try (FileOutputStream fos = new FileOutputStream(loc)) {
+      fos.write(jar.array(), jar.arrayOffset(), jar.limit());
+      fos.flush();
+    }
+    return jar;
+  }
+
+  public static ByteBuffer generateZip(Class<?>... classes) throws IOException {
+    SimplePostTool.BAOS bos = new SimplePostTool.BAOS();
+    try (ZipOutputStream zipOut = new ZipOutputStream(bos)) {
+      zipOut.setLevel(ZipOutputStream.DEFLATED);
+      for (Class<?> c : classes) {
+        String path = c.getName().replace('.', '/').concat(".class");
+        ZipEntry entry = new ZipEntry(path);
+        ByteBuffer b = SimplePostTool.inputStreamToByteArray(c.getClassLoader().getResourceAsStream(path));
+        zipOut.putNextEntry(entry);
+        zipOut.write(b.array(), b.arrayOffset(), b.limit());
+        zipOut.closeEntry();
+      }
+    }
+    return bos.getByteBuffer();
+  }
+
 }
