@@ -31,6 +31,7 @@ import java.lang.annotation.Retention;
 import java.lang.annotation.RetentionPolicy;
 import java.lang.annotation.Target;
 import java.lang.invoke.MethodHandles;
+import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.net.MalformedURLException;
@@ -40,6 +41,9 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.nio.file.StandardCopyOption;
+import java.security.AccessController;
+import java.security.PrivilegedAction;
 import java.security.SecureRandom;
 import java.time.Instant;
 import java.util.ArrayList;
@@ -59,7 +63,7 @@ import java.util.Optional;
 import java.util.Properties;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.concurrent.CopyOnWriteArraySet;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.SynchronousQueue;
 import java.util.concurrent.TimeUnit;
@@ -67,12 +71,10 @@ import java.util.stream.Collectors;
 
 import com.carrotsearch.randomizedtesting.RandomizedContext;
 import com.carrotsearch.randomizedtesting.RandomizedTest;
-import com.carrotsearch.randomizedtesting.TraceFormatting;
-import com.carrotsearch.randomizedtesting.annotations.ThreadLeakFilters;
-import com.carrotsearch.randomizedtesting.annotations.ThreadLeakLingering;
 import com.carrotsearch.randomizedtesting.rules.SystemPropertiesRestoreRule;
 
-import org.apache.commons.io.FileUtils;
+import io.opentracing.noop.NoopTracerFactory;
+import io.opentracing.util.GlobalTracer;
 import org.apache.http.client.HttpClient;
 import org.apache.logging.log4j.Level;
 import org.apache.lucene.analysis.MockAnalyzer;
@@ -81,7 +83,6 @@ import org.apache.lucene.index.IndexWriterConfig;
 import org.apache.lucene.util.Constants;
 import org.apache.lucene.util.LuceneTestCase.SuppressFileSystems;
 import org.apache.lucene.util.LuceneTestCase.SuppressSysoutChecks;
-import org.apache.lucene.util.QuickPatchThreadsFilter;
 import org.apache.lucene.util.TestUtil;
 import org.apache.solr.client.solrj.ResponseParser;
 import org.apache.solr.client.solrj.embedded.JettyConfig;
@@ -104,6 +105,7 @@ import org.apache.solr.common.SolrDocumentList;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.SolrInputDocument;
 import org.apache.solr.common.SolrInputField;
+import org.apache.solr.common.cloud.UrlScheme;
 import org.apache.solr.common.params.CommonParams;
 import org.apache.solr.common.params.ModifiableSolrParams;
 import org.apache.solr.common.params.MultiMapSolrParams;
@@ -113,7 +115,7 @@ import org.apache.solr.common.util.ContentStream;
 import org.apache.solr.common.util.ContentStreamBase;
 import org.apache.solr.common.util.ExecutorUtil;
 import org.apache.solr.common.util.ObjectReleaseTracker;
-import org.apache.solr.common.util.SolrjNamedThreadFactory;
+import org.apache.solr.common.util.SolrNamedThreadFactory;
 import org.apache.solr.common.util.SuppressForbidden;
 import org.apache.solr.common.util.Utils;
 import org.apache.solr.common.util.XML;
@@ -122,7 +124,6 @@ import org.apache.solr.core.CoresLocator;
 import org.apache.solr.core.NodeConfig;
 import org.apache.solr.core.SolrConfig;
 import org.apache.solr.core.SolrCore;
-import org.apache.solr.core.SolrResourceLoader;
 import org.apache.solr.core.SolrXmlConfig;
 import org.apache.solr.handler.UpdateRequestHandler;
 import org.apache.solr.request.LocalSolrQueryRequest;
@@ -133,12 +134,15 @@ import org.apache.solr.response.SolrQueryResponse;
 import org.apache.solr.schema.IndexSchema;
 import org.apache.solr.schema.SchemaField;
 import org.apache.solr.search.SolrIndexSearcher;
+import org.apache.solr.security.AllowListUrlChecker;
 import org.apache.solr.servlet.DirectSolrConnection;
 import org.apache.solr.update.processor.DistributedUpdateProcessor;
 import org.apache.solr.update.processor.DistributedZkUpdateProcessor;
 import org.apache.solr.update.processor.UpdateRequestProcessor;
+import org.apache.solr.util.BaseTestHarness;
 import org.apache.solr.util.ExternalPaths;
 import org.apache.solr.util.LogLevel;
+import org.apache.solr.util.ErrorLogMuter;
 import org.apache.solr.util.RandomizeSSL;
 import org.apache.solr.util.RandomizeSSL.SSLRandomizer;
 import org.apache.solr.util.RefCounted;
@@ -161,35 +165,27 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.xml.sax.SAXException;
 
+import org.apache.commons.io.IOUtils;
+
 import static java.util.Objects.requireNonNull;
 import static org.apache.solr.cloud.SolrZkServer.ZK_WHITELIST_PROPERTY;
+import static org.apache.solr.common.cloud.ZkStateReader.URL_SCHEME;
 import static org.apache.solr.update.processor.DistributedUpdateProcessor.DistribPhase;
 import static org.apache.solr.update.processor.DistributingUpdateProcessorFactory.DISTRIB_UPDATE_PARAM;
+import static org.hamcrest.core.StringContains.containsString;
 
 /**
  * A junit4 Solr test harness that extends SolrTestCase and, by extension, LuceneTestCase.
  * To change which core is used when loading the schema and solrconfig.xml, simply
  * invoke the {@link #initCore(String, String, String, String)} method.
  */
-@ThreadLeakFilters(defaultFilters = true, filters = {
-    SolrIgnoredThreadsFilter.class,
-    QuickPatchThreadsFilter.class
-})
 @SuppressSysoutChecks(bugUrl = "Solr dumps tons of logs to console.")
 @SuppressFileSystems("ExtrasFS") // might be ok, the failures with e.g. nightly runs might be "normal"
 @RandomizeSSL()
-@ThreadLeakLingering(linger = 10000)
+
 public abstract class SolrTestCaseJ4 extends SolrTestCase {
 
   private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
-
-  private static final List<String> DEFAULT_STACK_FILTERS = Arrays.asList(new String [] {
-      "org.junit.",
-      "junit.framework.",
-      "sun.",
-      "java.lang.reflect.",
-      "com.carrotsearch.randomizedtesting.",
-  });
   
   public static final String DEFAULT_TEST_COLLECTION_NAME = "collection1";
   public static final String DEFAULT_TEST_CORENAME = DEFAULT_TEST_COLLECTION_NAME;
@@ -197,8 +193,7 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
 
   public static final String SYSTEM_PROPERTY_SOLR_TESTS_MERGEPOLICYFACTORY = "solr.tests.mergePolicyFactory";
 
-  @Deprecated // For backwards compatibility only. Please do not use in new tests.
-  public static final String SYSTEM_PROPERTY_SOLR_DISABLE_SHARDS_WHITELIST = "solr.disable.shardsWhitelist";
+  public static final String TEST_URL_ALLOW_LIST = "solr.tests." + AllowListUrlChecker.URL_ALLOW_LIST;
 
   protected static String coreName = DEFAULT_TEST_CORENAME;
 
@@ -224,6 +219,17 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
     try (Writer writer =
              new OutputStreamWriter(Files.newOutputStream(coreDirectory.resolve(CORE_PROPERTIES_FILENAME)), Charset.forName("UTF-8"))) {
       properties.store(writer, testname);
+    }
+  }
+
+  protected void assertExceptionThrownWithMessageContaining(Class<? extends Throwable> expectedType,
+                                                            List<String> expectedStrings, ThrowingRunnable runnable) {
+    Throwable thrown = expectThrows(expectedType, runnable);
+
+    if (expectedStrings != null) {
+      for (String expectedString : expectedStrings) {
+        assertThat(thrown.getMessage(), containsString(expectedString));
+      }
     }
   }
 
@@ -254,7 +260,7 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
   
   // these are meant to be accessed sequentially, but are volatile just to ensure any test
   // thread will read the latest value
-  protected static volatile SSLTestConfig sslConfig;
+  public static volatile SSLTestConfig sslConfig;
 
   @Rule
   public TestRule solrTestRules = 
@@ -269,7 +275,7 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
     testExecutor = new ExecutorUtil.MDCAwareThreadPoolExecutor(0, Integer.MAX_VALUE,
         15L, TimeUnit.SECONDS,
         new SynchronousQueue<>(),
-        new SolrjNamedThreadFactory("testExecutor"),
+        new SolrNamedThreadFactory("testExecutor"),
         true);
 
     // set solr.install.dir needed by some test configs outside of the test sandbox (!)
@@ -288,24 +294,60 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
     System.setProperty("solr.v2RealPath", "true");
     System.setProperty("zookeeper.forceSync", "no");
     System.setProperty("jetty.testMode", "true");
-    System.setProperty("enable.update.log", usually() ? "true" : "false");
+    System.setProperty("enable.update.log", Boolean.toString(usually()));
     System.setProperty("tests.shardhandler.randomSeed", Long.toString(random().nextLong()));
     System.setProperty("solr.clustering.enabled", "false");
-    System.setProperty("solr.peerSync.useRangeVersions", String.valueOf(random().nextBoolean()));
     System.setProperty("solr.cloud.wait-for-updates-with-stale-state-pause", "500");
+    System.setProperty("solr.filterCache.async", String.valueOf(random().nextBoolean()));
+
+    System.setProperty("pkiHandlerPrivateKeyPath", SolrTestCaseJ4.class.getClassLoader().getResource("cryptokeys/priv_key512_pkcs8.pem").toExternalForm());
+    System.setProperty("pkiHandlerPublicKeyPath", SolrTestCaseJ4.class.getClassLoader().getResource("cryptokeys/pub_key512.der").toExternalForm());
+
     System.setProperty(ZK_WHITELIST_PROPERTY, "*");
     startTrackingSearchers();
     ignoreException("ignore_exception");
     newRandomConfig();
 
     sslConfig = buildSSLConfig();
-    // based on randomized SSL config, set SchemaRegistryProvider appropriately
-    HttpClientUtil.setSchemaRegistryProvider(sslConfig.buildClientSchemaRegistryProvider());
+    // based on randomized SSL config, set SocketFactoryRegistryProvider appropriately
+    HttpClientUtil.setSocketFactoryRegistryProvider(sslConfig.buildClientSocketFactoryRegistryProvider());
     Http2SolrClient.setDefaultSSLConfig(sslConfig.buildClientSSLConfig());
     if(isSSLMode()) {
       // SolrCloud tests should usually clear this
-      System.setProperty("urlScheme", "https");
+      System.setProperty(URL_SCHEME, UrlScheme.HTTPS);
+      UrlScheme.INSTANCE.setUrlScheme(UrlScheme.HTTPS);
+    } else {
+      UrlScheme.INSTANCE.setUrlScheme(UrlScheme.HTTP);
     }
+
+    resetGlobalTracer();
+    ExecutorUtil.resetThreadLocalProviders();
+  }
+
+  /**
+   * GlobalTracer is initialized by org.apache.solr.core.TracerConfigurator by
+   * org.apache.solr.core.CoreContainer.  Tests may need to reset it in the beginning of a test if
+   * it might have differing configuration from other tests in the same suite.
+   * It's also important to call {@link ExecutorUtil#resetThreadLocalProviders()}.
+   */
+  @SuppressForbidden(reason = "Hack to reset internal state of GlobalTracer")
+  public static void resetGlobalTracer() {
+    AccessController.doPrivileged((PrivilegedAction<Void>) () -> {
+      try {
+        final Class<GlobalTracer> globalTracerClass = GlobalTracer.class;
+        final Field isRegistered = globalTracerClass.getDeclaredField("isRegistered");
+        isRegistered.setAccessible(true);
+        isRegistered.setBoolean(null, false);
+        final Field tracer = globalTracerClass.getDeclaredField("tracer");
+        tracer.setAccessible(true);
+        tracer.set(null, NoopTracerFactory.create());
+      } catch (NoSuchFieldException | IllegalAccessException e) {
+        throw new RuntimeException(e);
+      }
+      return null;
+    });
+
+    assert GlobalTracer.isRegistered() == false;
   }
 
   @AfterClass
@@ -325,13 +367,6 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
 
       resetExceptionIgnores();
 
-      if (suiteFailureMarker.wasSuccessful()) {
-        // if the tests passed, make sure everything was closed / released
-        String orr = clearObjectTrackerAndCheckEmpty(60, false);
-        assertNull(orr, orr);
-      } else {
-        ObjectReleaseTracker.tryClose();
-      }
       resetFactory();
       coreName = DEFAULT_TEST_CORENAME;
     } finally {
@@ -344,8 +379,8 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
       System.clearProperty("tests.shardhandler.randomSeed");
       System.clearProperty("enable.update.log");
       System.clearProperty("useCompoundFile");
-      System.clearProperty("urlScheme");
-      System.clearProperty("solr.peerSync.useRangeVersions");
+      System.clearProperty(URL_SCHEME);
+      UrlScheme.INSTANCE.setUrlScheme(UrlScheme.HTTP);
       System.clearProperty("solr.cloud.wait-for-updates-with-stale-state-pause");
       System.clearProperty("solr.zkclienttmeout");
       System.clearProperty(ZK_WHITELIST_PROPERTY);
@@ -394,56 +429,13 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
       fail("ByteBuddy and Mockito are not available on classpath: " + e.toString());
     }
   }
-  
-  /**
-   * @return null if ok else error message
-   */
-  public static String clearObjectTrackerAndCheckEmpty(int waitSeconds) {
-    return clearObjectTrackerAndCheckEmpty(waitSeconds, false);
-  }
-  
-  /**
-   * @return null if ok else error message
-   */
-  public static String clearObjectTrackerAndCheckEmpty(int waitSeconds, boolean tryClose) {
-    int retries = 0;
-    String result;
-    do {
-      result = ObjectReleaseTracker.checkEmpty();
-      if (result == null)
-        break;
-      try {
-        if (retries % 10 == 0) {
-          log.info("Waiting for all tracked resources to be released");
-          if (retries > 10) {
-            TraceFormatting tf = new TraceFormatting(DEFAULT_STACK_FILTERS);
-            Map<Thread,StackTraceElement[]> stacksMap = Thread.getAllStackTraces();
-            Set<Entry<Thread,StackTraceElement[]>> entries = stacksMap.entrySet();
-            for (Entry<Thread,StackTraceElement[]> entry : entries) {
-              String stack = tf.formatStackTrace(entry.getValue());
-              System.err.println(entry.getKey().getName() + ":\n" + stack);
-            }
-          }
-        }
-        TimeUnit.SECONDS.sleep(1);
-      } catch (InterruptedException e) { break; }
-    }
-    while (retries++ < waitSeconds);
-    
-    
-    log.info("------------------------------------------------------- Done waiting for tracked resources to be released");
-    
-    ObjectReleaseTracker.clear();
-    
-    return result;
-  }
 
   @SuppressForbidden(reason = "Using the Level class from log4j2 directly")
   private static Map<String, Level> savedClassLogLevels = new HashMap<>();
 
   public static void initClassLogLevels() {
-    Class currentClass = RandomizedContext.current().getTargetClass();
-    LogLevel annotation = (LogLevel) currentClass.getAnnotation(LogLevel.class);
+    Class<?> currentClass = RandomizedContext.current().getTargetClass();
+    LogLevel annotation = currentClass.getAnnotation(LogLevel.class);
     if (annotation == null) {
       return;
     }
@@ -514,8 +506,10 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
     }
 
     SSLTestConfig result = sslRandomizer.createSSLTestConfig();
-    log.info("Randomized ssl ({}) and clientAuth ({}) via: {}",
-             result.isSSLMode(), result.isClientAuthMode(), sslRandomizer.debug);
+    if (log.isInfoEnabled()) {
+      log.info("Randomized ssl ({}) and clientAuth ({}) via: {}",
+          result.isSSLMode(), result.isClientAuthMode(), sslRandomizer.debug);
+    }
     return result;
   }
 
@@ -551,7 +545,7 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
     if (xmlStr == null)
       xmlStr = "<solr></solr>";
     Files.write(solrHome.resolve(SolrXmlConfig.SOLR_XML_FILE), xmlStr.getBytes(StandardCharsets.UTF_8));
-    h = new TestHarness(SolrXmlConfig.fromSolrHome(solrHome));
+    h = new TestHarness(SolrXmlConfig.fromSolrHome(solrHome, new Properties()));
     lrf = h.getRequestFactory("/select", 0, 20, CommonParams.VERSION, "2.2");
   }
   
@@ -590,12 +584,16 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
   @Override
   public void setUp() throws Exception {
     super.setUp();
-    log.info("###Starting " + getTestName());  // returns <unknown>???
+    if (log.isInfoEnabled()) {
+      log.info("###Starting {}", getTestName());  // returns <unknown>???
+    }
   }
 
   @Override
   public void tearDown() throws Exception {
-    log.info("###Ending " + getTestName());    
+    if (log.isInfoEnabled()) {
+      log.info("###Ending {}", getTestName());
+    }
     super.tearDown();
   }
 
@@ -622,7 +620,9 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
       final int id = dataDirCount.incrementAndGet();
       dataDir = initCoreDataDir = createTempDir("data-dir-"+ id).toFile();
       assertNotNull(dataDir);
-      log.info("Created dataDir: {}", dataDir.getAbsolutePath());
+      if (log.isInfoEnabled()) {
+        log.info("Created dataDir: {}", dataDir.getAbsolutePath());
+      }
     }
     return dataDir;
   }
@@ -668,32 +668,46 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
     numCloses = SolrIndexSearcher.numCloses.getAndSet(0);
     if (numOpens != 0 || numCloses != 0) {
       // NOTE: some other tests don't use this base class and hence won't reset the counts.
-      log.warn("startTrackingSearchers: numOpens="+numOpens+" numCloses="+numCloses);
+      log.warn("startTrackingSearchers: numOpens={} numCloses={}", numOpens, numCloses);
       numOpens = numCloses = 0;
     }
   }
-  
-  /** Causes an exception matching the regex pattern to not be logged. */
-  public static void ignoreException(String pattern) {
-    if (SolrException.ignorePatterns == null) // usually initialized already but in case not...
-      resetExceptionIgnores();
-    SolrException.ignorePatterns.add(pattern);
-  }
 
-  public static void unIgnoreException(String pattern) {
-    if (SolrException.ignorePatterns != null)
-      SolrException.ignorePatterns.remove(pattern);
+  private final static Map<String,ErrorLogMuter> errorMuters = new ConcurrentHashMap<>();
+  
+  /** 
+   * Causes any ERROR log messages matching with a substring matching the regex pattern to be filtered out by the ROOT logger
+   *
+   * @see #resetExceptionIgnores
+   * @deprecated use a {@link ErrorLogMuter} instead
+   */
+  @Deprecated
+  public static void ignoreException(String pattern) {
+    errorMuters.computeIfAbsent(pattern, (pat) -> ErrorLogMuter.regex(pat));
   }
 
   /**
-   * Clears all exception patterns, although keeps {@code "ignore_exception"}.
-   * {@link SolrTestCaseJ4} calls this in {@link AfterClass} so usually tests don't need to call this.
+   * @see #ignoreException
+   * @deprecated use a {@link ErrorLogMuter} instead
    */
-  public static void resetExceptionIgnores() {
-    // CopyOnWrite for safety; see SOLR-11757
-    SolrException.ignorePatterns = new CopyOnWriteArraySet<>(Collections.singleton("ignore_exception"));
+  @Deprecated
+  public static void unIgnoreException(String pattern) {
+    errorMuters.computeIfPresent(pattern, (pat, muter) -> { IOUtils.closeQuietly(muter); return null; } );
   }
-
+  
+  /**
+   * Clears all exception patterns, immediately re-registering {@code "ignore_exception"}.
+   * {@link SolrTestCaseJ4} calls this in both {@link BeforeClass} {@link AfterClass} so usually tests don't need to call this.
+   * 
+   * @see #ignoreException
+   * @deprecated use a {@link ErrorLogMuter} instead
+   */
+  @Deprecated
+  public static void resetExceptionIgnores() {
+    errorMuters.forEach( (k, muter) -> { IOUtils.closeQuietly(muter); errorMuters.remove(k); } );
+    ignoreException("ignore_exception");
+  }
+  
   protected static String getClassName() {
     return getTestClass().getName();
   }
@@ -807,20 +821,21 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
 
   public static CoreContainer createCoreContainer(Path solrHome, String solrXML) {
     testSolrHome = requireNonNull(solrHome);
+    System.setProperty("solr.solr.home", solrHome.toAbsolutePath().toString());
     h = new TestHarness(solrHome, solrXML);
     lrf = h.getRequestFactory("", 0, 20, CommonParams.VERSION, "2.2");
     return h.getCoreContainer();
   }
 
   public static CoreContainer createCoreContainer(NodeConfig config, CoresLocator locator) {
-    testSolrHome = config.getSolrResourceLoader().getInstancePath();
+    testSolrHome = config.getSolrHome();
     h = new TestHarness(config, locator);
     lrf = h.getRequestFactory("", 0, 20, CommonParams.VERSION, "2.2");
     return h.getCoreContainer();
   }
 
   public static CoreContainer createCoreContainer(String coreName, String dataDir, String solrConfig, String schema) {
-    NodeConfig nodeConfig = TestHarness.buildTestNodeConfig(new SolrResourceLoader(TEST_PATH()));
+    NodeConfig nodeConfig = TestHarness.buildTestNodeConfig(TEST_PATH());
     CoresLocator locator = new TestHarness.TestCoresLocator(coreName, dataDir, solrConfig, schema);
     CoreContainer cc = createCoreContainer(nodeConfig, locator);
     h.coreName = coreName;
@@ -829,6 +844,7 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
 
   public static CoreContainer createDefaultCoreContainer(Path solrHome) {
     testSolrHome = requireNonNull(solrHome);
+    System.setProperty("solr.solr.home", solrHome.toAbsolutePath().toString());
     h = new TestHarness("collection1", initAndGetDataDir().getAbsolutePath(), "solrconfig.xml", "schema.xml");
     lrf = h.getRequestFactory("", 0, 20, CommonParams.VERSION, "2.2");
     return h.getCoreContainer();
@@ -854,7 +870,9 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
    * to log the fact that their setUp process has ended.
    */
   public void postSetUp() {
-    log.info("####POSTSETUP " + getTestName());
+    if (log.isInfoEnabled()) {
+      log.info("####POSTSETUP {}", getTestName());
+    }
   }
 
 
@@ -864,7 +882,9 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
    * tearDown method.
    */
   public void preTearDown() {
-    log.info("####PRETEARDOWN " + getTestName());
+    if (log.isInfoEnabled()) {
+      log.info("####PRETEARDOWN {}", getTestName());
+    }
   }
 
   /**
@@ -973,17 +993,15 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
         tests = allTests;
       }
 
-      String results = h.validateXPath(response, tests);
+      String results = BaseTestHarness.validateXPath(response, tests);
 
       if (null != results) {
         String msg = "REQUEST FAILED: xpath=" + results
             + "\n\txml response was: " + response
             + "\n\trequest was:" + req.getParamString();
 
-        log.error(msg);
-        throw new RuntimeException(msg);
+        fail(msg);
       }
-
     } catch (XPathExpressionException e1) {
       throw new RuntimeException("XPath is invalid", e1);
     } catch (Exception e2) {
@@ -1009,7 +1027,7 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
       failed = false;
     } finally {
       if (failed) {
-        log.error("REQUEST FAILED: " + req.getParamString());
+        log.error("REQUEST FAILED: {}", req.getParamString());
       }
     }
 
@@ -1058,7 +1076,7 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
         failed = false;
       } finally {
         if (failed) {
-          log.error("REQUEST FAILED: " + req.getParamString());
+          log.error("REQUEST FAILED: {}", req.getParamString());
         }
       }
 
@@ -1071,19 +1089,15 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
           String err = JSONTestUtil.match(response, testJSON, delta);
           failed = false;
           if (err != null) {
-            log.error("query failed JSON validation. error=" + err +
-                "\n expected =" + testJSON +
-                "\n response = " + response +
-                "\n request = " + req.getParamString()
+            log.error("query failed JSON validation. error={}\n expected ={}\n response = {}\n request = {}"
+                , err, testJSON, response, req.getParamString()
             );
             throw new RuntimeException(err);
           }
         } finally {
           if (failed) {
-            log.error("JSON query validation threw an exception." + 
-                "\n expected =" + testJSON +
-                "\n response = " + response +
-                "\n request = " + req.getParamString()
+            log.error("JSON query validation threw an exception.\n expected ={} \n response = {}\n request = {}"
+                , testJSON, response, req.getParamString()
             );
           }
         }
@@ -1280,13 +1294,12 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
     return msp;
   }
 
-  public static Map map(Object... params) {
-    LinkedHashMap ret = new LinkedHashMap();
-    for (int i=0; i<params.length; i+=2) {
-      Object o = ret.put(params[i], params[i+1]);
-      // TODO: handle multi-valued map?
-    }
-    return ret;
+  public static Map<String, String> map(String... params) {
+    return Utils.makeMap(params);
+  }
+
+  public static Map<String, Object> map(Object... params) {
+    return Utils.makeMap(params);
   }
 
   /**
@@ -1430,6 +1443,7 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
    * Appends to the <code>out</code> array with JSON from the <code>doc</code>.
    * Doesn't currently handle boosts, but does recursively handle child documents
    */
+  @SuppressWarnings({"unchecked"})
   public static void json(SolrInputDocument doc, CharArr out) {
     try {
       out.append('{');
@@ -1564,7 +1578,9 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
       params = mparams;
     }
     String response = updateJ(jsonAdd(sdoc), params);
+    @SuppressWarnings({"rawtypes"})
     Map rsp = (Map)ObjectBuilder.fromJSON(response);
+    @SuppressWarnings({"rawtypes"})
     List lst = (List)rsp.get("adds");
     if (lst == null || lst.size() == 0) return null;
     return (Long) lst.get(1);
@@ -1577,7 +1593,9 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
       params = mparams;
     }
     String response = updateJ(jsonDelId(id), params);
+    @SuppressWarnings({"rawtypes"})
     Map rsp = (Map)ObjectBuilder.fromJSON(response);
+    @SuppressWarnings({"rawtypes"})
     List lst = (List)rsp.get("deletes");
     if (lst == null || lst.size() == 0) return null;
     return (Long) lst.get(1);
@@ -1590,7 +1608,9 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
       params = mparams;
     }
     String response = updateJ(jsonDelQ(q), params);
+    @SuppressWarnings({"rawtypes"})
     Map rsp = (Map)ObjectBuilder.fromJSON(response);
+    @SuppressWarnings({"rawtypes"})
     List lst = (List)rsp.get("deleteByQuery");
     if (lst == null || lst.size() == 0) return null;
     return (Long) lst.get(1);
@@ -1601,8 +1621,9 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
   /////////////////////////////////////////////////////////////////////////////////////
   
   public abstract static class Vals {
+    @SuppressWarnings({"rawtypes"})
     public abstract Comparable get();
-    public String toJSON(Comparable val) {
+    public String toJSON(@SuppressWarnings({"rawtypes"})Comparable val) {
       return JSONUtil.toJSON(val);
     }
 
@@ -1629,6 +1650,7 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
     }
 
     @Override
+    @SuppressWarnings({"rawtypes"})
     public Comparable get() {
       return getInt();
     }
@@ -1655,6 +1677,7 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
     }
 
     @Override
+    @SuppressWarnings({"rawtypes"})
     public Comparable get() {
       return getInt();
     }
@@ -1674,6 +1697,7 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
     }
 
     @Override
+    @SuppressWarnings({"rawtypes"})
     public Comparable get() {
       return getFloat();
     }
@@ -1682,6 +1706,7 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
   public static class BVal extends Vals {
 
     @Override
+    @SuppressWarnings({"rawtypes"})
     public Comparable get() {
       return random().nextBoolean();
     }
@@ -1705,6 +1730,7 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
     }
 
     @Override
+    @SuppressWarnings({"rawtypes"})
     public Comparable get() {
       char[] arr = new char[between(minLength,maxLength)];
       for (int i=0; i<arr.length; i++) {
@@ -1718,6 +1744,7 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
   public static final IRange ZERO_TWO = new IRange(0,2);
   public static final IRange ONE_ONE = new IRange(1,1);
 
+  @SuppressWarnings({"rawtypes"})
   public static class Doc implements Comparable {
     public Comparable id;
     public List<Fld> fields;
@@ -1742,12 +1769,14 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
     }
 
     @Override
+    @SuppressWarnings({"unchecked"})
     public int compareTo(Object o) {
       if (!(o instanceof Doc)) return this.getClass().hashCode() - o.getClass().hashCode();
       Doc other = (Doc)o;
       return this.id.compareTo(other.id);
     }
 
+    @SuppressWarnings({"rawtypes"})
     public List<Comparable> getValues(String field) {
       for (Fld fld : fields) {
         if (fld.ftype.fname.equals(field)) return fld.vals;
@@ -1755,6 +1784,7 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
       return null;
     }
 
+    @SuppressWarnings({"rawtypes"})
     public Comparable getFirstValue(String field) {
       List<Comparable> vals = getValues(field);
       return vals==null || vals.size()==0 ? null : vals.get(0);
@@ -1777,6 +1807,7 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
 
   public static class Fld {
     public FldType ftype;
+    @SuppressWarnings({"rawtypes"})
     public List<Comparable> vals;
     @Override
     public String toString() {
@@ -1799,10 +1830,12 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
       this.vals = vals;      
     }
 
+    @SuppressWarnings({"rawtypes"})
     public Comparable createValue() {
       return vals.get();
     }
 
+    @SuppressWarnings({"rawtypes"})
     public List<Comparable> createValues() {
       int nVals = numValues.getInt();
       if (nVals <= 0) return null;
@@ -1813,6 +1846,7 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
     }
 
     public Fld createField() {
+      @SuppressWarnings({"rawtypes"})
       List<Comparable> vals = createValues();
       if (vals == null) return null;
 
@@ -1834,6 +1868,7 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
       }
     });
   }
+  @SuppressWarnings({"rawtypes"})
   public Map<Comparable,Doc> indexDocs(List<FldType> descriptor, Map<Comparable,Doc> model, int nDocs) throws Exception {
     if (model == null) {
       model = new LinkedHashMap<>();
@@ -1878,6 +1913,7 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
 
     response = ((Map)response).get("response");
     response = ((Map)response).get("docs");
+    @SuppressWarnings({"unchecked"})
     List<Map> docList = (List<Map>)response;
     int order = 0;
     for (Map doc : docList) {
@@ -1954,6 +1990,7 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
     }
 
     return new Comparator<Doc>() {
+      @SuppressWarnings({"rawtypes"})
       private Comparable zeroVal(Comparable template) {
         if (template == null) return null;
         if (template instanceof String) return null;  // fast-path for string
@@ -1968,8 +2005,11 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
       }
 
       @Override
+      @SuppressWarnings({"unchecked"})
       public int compare(Doc o1, Doc o2) {
+        @SuppressWarnings({"rawtypes"})
         Comparable v1 = o1.getFirstValue(field);
+        @SuppressWarnings({"rawtypes"})
         Comparable v2 = o2.getFirstValue(field);
 
         v1 = v1 == null ? zeroVal(v2) : v1;
@@ -2023,7 +2063,7 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
           out.append('[');
         }
         boolean firstVal = true;
-        for (Comparable val : fld.vals) {
+        for (@SuppressWarnings({"rawtypes"})Comparable val : fld.vals) {
           if (firstVal) firstVal=false;
           else out.append(',');
           out.append(JSONUtil.toJSON(val));
@@ -2040,6 +2080,7 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
   }
 
   /** Return a Map from field value to a list of document ids */
+  @SuppressWarnings({"rawtypes"})
   public Map<Comparable, List<Comparable>> invertField(Map<Comparable, Doc> model, String field) {
     Map<Comparable, List<Comparable>> value_to_id = new HashMap<>();
 
@@ -2105,7 +2146,7 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
       throws IOException, SAXException {
 
     try {
-      String xml = FileUtils.readFileToString(file, "UTF-8");
+      String xml = Files.readString(file.toPath());
       String results = TestHarness.validateXPath(xml, xpath);
       if (null != results) {
         String msg = "File XPath failure: file=" + file.getPath() + " xpath="
@@ -2152,62 +2193,52 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
   }
 
   public static void copyMinConf(File dstRoot, String propertiesContent, String solrconfigXmlName) throws IOException {
+    Path dstPath = dstRoot.toPath();
+    Path subHome = dstPath.resolve("conf");
+    Files.createDirectories(subHome);
 
-    File subHome = new File(dstRoot, "conf");
-    if (! dstRoot.exists()) {
-      assertTrue("Failed to make subdirectory ", dstRoot.mkdirs());
-    }
-    Files.createFile(dstRoot.toPath().resolve("core.properties"));
     if (propertiesContent != null) {
-      FileUtils.writeStringToFile(new File(dstRoot, "core.properties"), propertiesContent, StandardCharsets.UTF_8);
+      Files.writeString(dstRoot.toPath().resolve(CORE_PROPERTIES_FILENAME), propertiesContent);
     }
-    String top = SolrTestCaseJ4.TEST_HOME() + "/collection1/conf";
-    FileUtils.copyFile(new File(top, "schema-tiny.xml"), new File(subHome, "schema.xml"));
-    FileUtils.copyFile(new File(top, solrconfigXmlName), new File(subHome, "solrconfig.xml"));
-    FileUtils.copyFile(new File(top, "solrconfig.snippet.randomindexconfig.xml"), new File(subHome, "solrconfig.snippet.randomindexconfig.xml"));
+    Path top = SolrTestCaseJ4.TEST_PATH().resolve("collection1").resolve("conf");
+    Files.copy(top.resolve("schema-tiny.xml"), subHome.resolve("schema.xml"));
+    Files.copy(top.resolve(solrconfigXmlName), subHome.resolve("solrconfig.xml"));
+    Files.copy(top.resolve("solrconfig.snippet.randomindexconfig.xml"), subHome.resolve("solrconfig.snippet.randomindexconfig.xml"));
   }
 
   // Creates minimal full setup, including solr.xml
   public static void copyMinFullSetup(File dstRoot) throws IOException {
-    if (! dstRoot.exists()) {
-      assertTrue("Failed to make subdirectory ", dstRoot.mkdirs());
-    }
-    File xmlF = new File(SolrTestCaseJ4.TEST_HOME(), "solr.xml");
-    FileUtils.copyFile(xmlF, new File(dstRoot, "solr.xml"));
+    Files.createDirectories(dstRoot.toPath());
+    Files.copy(SolrTestCaseJ4.TEST_PATH().resolve("solr.xml"), dstRoot.toPath().resolve("solr.xml"));
     copyMinConf(dstRoot);
   }
 
   // Just copies the file indicated to the tmp home directory naming it "solr.xml"
   public static void copyXmlToHome(File dstRoot, String fromFile) throws IOException {
-    if (! dstRoot.exists()) {
-      assertTrue("Failed to make subdirectory ", dstRoot.mkdirs());
-    }
-    File xmlF = new File(SolrTestCaseJ4.TEST_HOME(), fromFile);
-    FileUtils.copyFile(xmlF, new File(dstRoot, "solr.xml"));
-    
+    Files.createDirectories(dstRoot.toPath());
+    Files.copy(SolrTestCaseJ4.TEST_PATH().resolve(fromFile), dstRoot.toPath().resolve("solr.xml"));
   }
   // Creates a consistent configuration, _including_ solr.xml at dstRoot. Creates collection1/conf and copies
   // the stock files in there.
 
   public static void copySolrHomeToTemp(File dstRoot, String collection) throws IOException {
-    if (!dstRoot.exists()) {
-      assertTrue("Failed to make subdirectory ", dstRoot.mkdirs());
-    }
-    FileUtils.copyFile(new File(SolrTestCaseJ4.TEST_HOME(), "solr.xml"), new File(dstRoot, "solr.xml"));
+    Path subHome = dstRoot.toPath().resolve(collection).resolve("conf");
+    Files.createDirectories(subHome);
 
-    File subHome = new File(dstRoot, collection + File.separator + "conf");
-    String top = SolrTestCaseJ4.TEST_HOME() + "/collection1/conf";
-    FileUtils.copyFile(new File(top, "currency.xml"), new File(subHome, "currency.xml"));
-    FileUtils.copyFile(new File(top, "mapping-ISOLatin1Accent.txt"), new File(subHome, "mapping-ISOLatin1Accent.txt"));
-    FileUtils.copyFile(new File(top, "old_synonyms.txt"), new File(subHome, "old_synonyms.txt"));
-    FileUtils.copyFile(new File(top, "open-exchange-rates.json"), new File(subHome, "open-exchange-rates.json"));
-    FileUtils.copyFile(new File(top, "protwords.txt"), new File(subHome, "protwords.txt"));
-    FileUtils.copyFile(new File(top, "schema.xml"), new File(subHome, "schema.xml"));
-    FileUtils.copyFile(new File(top, "enumsConfig.xml"), new File(subHome, "enumsConfig.xml"));
-    FileUtils.copyFile(new File(top, "solrconfig.snippet.randomindexconfig.xml"), new File(subHome, "solrconfig.snippet.randomindexconfig.xml"));
-    FileUtils.copyFile(new File(top, "solrconfig.xml"), new File(subHome, "solrconfig.xml"));
-    FileUtils.copyFile(new File(top, "stopwords.txt"), new File(subHome, "stopwords.txt"));
-    FileUtils.copyFile(new File(top, "synonyms.txt"), new File(subHome, "synonyms.txt"));
+    Files.copy(SolrTestCaseJ4.TEST_PATH().resolve("solr.xml"), dstRoot.toPath().resolve("solr.xml"), StandardCopyOption.REPLACE_EXISTING);
+
+    Path top = SolrTestCaseJ4.TEST_PATH().resolve("collection1").resolve("conf");
+    Files.copy(top.resolve("currency.xml"), subHome.resolve("currency.xml"));
+    Files.copy(top.resolve("mapping-ISOLatin1Accent.txt"), subHome.resolve("mapping-ISOLatin1Accent.txt"));
+    Files.copy(top.resolve("old_synonyms.txt"), subHome.resolve("old_synonyms.txt"));
+    Files.copy(top.resolve("open-exchange-rates.json"), subHome.resolve("open-exchange-rates.json"));
+    Files.copy(top.resolve("protwords.txt"), subHome.resolve("protwords.txt"));
+    Files.copy(top.resolve("schema.xml"), subHome.resolve("schema.xml"));
+    Files.copy(top.resolve("enumsConfig.xml"), subHome.resolve("enumsConfig.xml"));
+    Files.copy(top.resolve("solrconfig.snippet.randomindexconfig.xml"), subHome.resolve("solrconfig.snippet.randomindexconfig.xml"));
+    Files.copy(top.resolve("solrconfig.xml"), subHome.resolve("solrconfig.xml"));
+    Files.copy(top.resolve("stopwords.txt"), subHome.resolve("stopwords.txt"));
+    Files.copy(top.resolve("synonyms.txt"), subHome.resolve("synonyms.txt"));
   }
 
   public boolean compareSolrDocument(Object expected, Object actual) {
@@ -2332,12 +2363,16 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
         if (!(sdoc2.get(key2).getFirstValue() instanceof SolrInputDocument)) {
           return false;
         }
+        @SuppressWarnings({"rawtypes"})
         Collection col1 = (Collection) val1;
+        @SuppressWarnings({"rawtypes"})
         Collection col2 = (Collection) val2;
         if (col1.size() != col2.size()) {
           return false;
         }
+        @SuppressWarnings({"unchecked"})
         Iterator<SolrInputDocument> colIter1 = col1.iterator();
+        @SuppressWarnings({"unchecked"})
         Iterator<SolrInputDocument> colIter2 = col2.iterator();
         while (colIter1.hasNext()) {
           if (!compareSolrInputDocument(colIter1.next(), colIter2.next())) {
@@ -2540,7 +2575,7 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
   }
 
   public static CloudSolrClientBuilder newCloudSolrClient(String zkHost) {
-    return (CloudSolrClientBuilder) new CloudSolrClientBuilder(Collections.singletonList(zkHost), Optional.empty());
+    return new CloudSolrClientBuilder(Collections.singletonList(zkHost), Optional.empty());
   }
 
   /**
@@ -2857,7 +2892,7 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
 
     if (null != allowedAlg) {
       // the user has explicitly requested to bypass our assertions and allow a particular alg
-      // the only thing we should do is assert that the algorithm they have whitelisted is actaully used
+      // the only thing we should do is assert that the algorithm they have allowed is actually used
       
       
       final String actualAlg = (new SecureRandom()).getAlgorithm();
@@ -2878,10 +2913,10 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
     
     assertFalse("SecureRandom algorithm '" + algorithm + "' is in use by your JVM, " +
                 "which is a potentially blocking algorithm on some environments. " +
-                "Please report the details of this failure (and your JVM vendor/version) to solr-user@lucene.apache.org. " +
+                "Please report the details of this failure (and your JVM vendor/version) to users@solr.apache.org. " +
                 "You can try to run your tests with -D"+EGD+"="+URANDOM+" or bypass this check using " +
                 "-Dtest.solr.allowed.securerandom="+ algorithm +" as a JVM option when running tests.",
-                // be permissive in our checks and blacklist only algorithms 
+                // be permissive in our checks and deny only algorithms
                 // that are known to be blocking under some circumstances
                 algorithm.equals("NativePRNG") || algorithm.equals("NativePRNGBlocking"));
   }
@@ -2895,16 +2930,17 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
   }
   
   @Deprecated // For backwards compatibility only. Please do not use in new tests.
-  protected static void systemSetPropertySolrDisableShardsWhitelist(String value) {
-    System.setProperty(SYSTEM_PROPERTY_SOLR_DISABLE_SHARDS_WHITELIST, value);
+  protected static void systemSetPropertySolrDisableUrlAllowList(String value) {
+    System.setProperty(AllowListUrlChecker.DISABLE_URL_ALLOW_LIST, value);
   }
 
   @Deprecated // For backwards compatibility only. Please do not use in new tests.
-  protected static void systemClearPropertySolrDisableShardsWhitelist() {
-    System.clearProperty(SYSTEM_PROPERTY_SOLR_DISABLE_SHARDS_WHITELIST);
+  protected static void systemClearPropertySolrDisableUrlAllowList() {
+    System.clearProperty(AllowListUrlChecker.DISABLE_URL_ALLOW_LIST);
   }
 
-  protected <T> T pickRandom(T... options) {
+  @SafeVarargs
+  protected static <T> T pickRandom(T... options) {
     return options[random().nextInt(options.length)];
   }
   
@@ -2945,18 +2981,6 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
   public static final String UPDATELOG_SYSPROP = "solr.tests.ulog";
 
   /**
-   * randomizes the updateLog between different update log implementations for better test coverage
-   */
-  public static void randomizeUpdateLogImpl() {
-    if (random().nextBoolean()) {
-      System.setProperty(UPDATELOG_SYSPROP, "solr.CdcrUpdateLog");
-    } else {
-      System.setProperty(UPDATELOG_SYSPROP,"solr.UpdateLog");
-    }
-    log.info("updateLog impl={}", System.getProperty(UPDATELOG_SYSPROP));
-  }
-
-  /**
    * Sets various sys props related to user specified or randomized choices regarding the types 
    * of numerics that should be used in tests.
    *
@@ -2979,7 +3003,7 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
     
     if (RandomizedContext.current().getTargetClass().isAnnotationPresent(SolrTestCaseJ4.SuppressPointFields.class)
         || (! usePoints)) {
-      log.info("Using TrieFields (NUMERIC_POINTS_SYSPROP=false) w/NUMERIC_DOCVALUES_SYSPROP="+useDV);
+      log.info("Using TrieFields (NUMERIC_POINTS_SYSPROP=false) w/NUMERIC_DOCVALUES_SYSPROP={}", useDV);
       
       org.apache.solr.schema.PointField.TEST_HACK_IGNORE_USELESS_TRIEFIELD_ARGS = false;
       private_RANDOMIZED_NUMERIC_FIELDTYPES.put(Integer.class, "solr.TrieIntField");
@@ -2991,7 +3015,7 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
       
       System.setProperty(NUMERIC_POINTS_SYSPROP, "false");
     } else {
-      log.info("Using PointFields (NUMERIC_POINTS_SYSPROP=true) w/NUMERIC_DOCVALUES_SYSPROP="+useDV);
+      log.info("Using PointFields (NUMERIC_POINTS_SYSPROP=true) w/NUMERIC_DOCVALUES_SYSPROP={}", useDV);
 
       org.apache.solr.schema.PointField.TEST_HACK_IGNORE_USELESS_TRIEFIELD_ARGS = true;
       private_RANDOMIZED_NUMERIC_FIELDTYPES.put(Integer.class, "solr.IntPointField");
@@ -3003,7 +3027,7 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
       
       System.setProperty(NUMERIC_POINTS_SYSPROP, "true");
     }
-    for (Map.Entry<Class,String> entry : RANDOMIZED_NUMERIC_FIELDTYPES.entrySet()) {
+    for (Map.Entry<Class<?>,String> entry : RANDOMIZED_NUMERIC_FIELDTYPES.entrySet()) {
       System.setProperty("solr.tests." + entry.getKey().getSimpleName() + "FieldType",
                          entry.getValue());
 
@@ -3029,7 +3053,7 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
     org.apache.solr.schema.PointField.TEST_HACK_IGNORE_USELESS_TRIEFIELD_ARGS = false;
     System.clearProperty("solr.tests.numeric.points");
     System.clearProperty("solr.tests.numeric.points.dv");
-    for (Class c : RANDOMIZED_NUMERIC_FIELDTYPES.keySet()) {
+    for (Class<?> c : RANDOMIZED_NUMERIC_FIELDTYPES.keySet()) {
       System.clearProperty("solr.tests." + c.getSimpleName() + "FieldType");
     }
     private_RANDOMIZED_NUMERIC_FIELDTYPES.clear();
@@ -3045,7 +3069,7 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
 
   private static boolean isChildDoc(Object o) {
     if(o instanceof Collection) {
-      Collection col = (Collection) o;
+      Collection<?> col = (Collection<?>) o;
       if(col.size() == 0) {
         return false;
       }
@@ -3054,7 +3078,7 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
     return o instanceof SolrInputDocument;
   }
 
-  private static final Map<Class,String> private_RANDOMIZED_NUMERIC_FIELDTYPES = new HashMap<>();
+  private static final Map<Class<?>,String> private_RANDOMIZED_NUMERIC_FIELDTYPES = new HashMap<>();
   
   /**
    * A Map of "primitive" java "numeric" types and the string name of the <code>class</code> used in the
@@ -3065,7 +3089,7 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
    *
    * @see #randomizeNumericTypesProperties
    */
-  protected static final Map<Class,String> RANDOMIZED_NUMERIC_FIELDTYPES
+  protected static final Map<Class<?>,String> RANDOMIZED_NUMERIC_FIELDTYPES
     = Collections.unmodifiableMap(private_RANDOMIZED_NUMERIC_FIELDTYPES);
 
 }
